# coral

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  release.yml
src/coral/: __init__.py  board_evaluation.py  chi_nn.py
src/coral/neural_networks/: NNModelType.py  NNModelTypeArgs.py  __init__.py  factory.py  neural_net_architecture_args.py  neural_net_board_eval_args.py  nn_content_evaluator.py  nn_model_type.py  nn_model_type_args.py  nn_state_evaluator.py  torch_eval
src/coral/neural_networks/input_converters/: __init__.py  content_to_input.py
src/coral/neural_networks/models/: __init__.py  entity_token_transformer_value_net.py  multi_layer_perceptron.py  transformer_one.py
src/coral/neural_networks/output_converters/: __init__.py  factory.py  model_output_type.py  output_value_converter.py
src/coral/utils/: logger.py  small_tools.py
tests/: test_entity_token_transformer_factory.py  test_entity_token_transformer_value_net.py  test_placeholder.py
